poll ui + create poll api

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=""
+DATABASE_URL="postgresql://postgres:ouFxPFukh5zBy1b1uIJg@containers-us-west-119.railway.app:7762/railway"
 NEXTAUTH_URL="http://localhost:3000"
 EMAIL_SERVER_PORT=587
 EMAIL_SERVER_HOST="smtp.gmail.com"
