--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "theme-change": "^2.2.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
