--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "cors": "^2.8.5",
     "daisyui": "^2.41.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@prisma/client": "^4.6.1",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/cors": "^2.8.12",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "prisma": "^4.6.1",
